# engineering-crew

./: README.md  pyproject.toml
TraderSim/: main.py  tradersim.db
TraderSim/backend/controllers/: account_controller.py
TraderSim/backend/models/: __init__.py  account.py  transaction.py
TraderSim/backend/services/: account_service.py  portfolio_service.py
TraderSim/frontend/: app.py
TraderSim/tests/: test_account.py  test_transaction.py
src/engineering_crew/: crew.py  main.py
src/engineering_crew/config/: agents.yaml  tasks.yaml
