[project]
name = "engineering_crew"
version = "0.1.0"
description = "engineering-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.10.1",
    "gradio>=6.9.0",
    "flask>=3.0.0",
]

[project.scripts]
engineering_crew = "engineering_crew.main:run"
run_crew = "engineering_crew.main:run"
train = "engineering_crew.main:train"
replay = "engineering_crew.main:replay"
test = "engineering_crew.main:test"
run_with_trigger = "engineering_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = [
    "lancedb ; sys_platform != 'win32'"
]
